# vigil

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.cache/clangd/index/: arena.c.14C0EA763028CE71.idx  arena.h.90AB52C04E7D4B9D.idx  capture.c.C94490EC780D60A8.idx  capture.h.3C67A5BE9FC75D58.idx  hashmap.c.E86557666B348EE7.idx  hashmap.h.77C39C583CD85A0B.idx  main.c.1CB849D814E65181.idx  parse.c.659A5D655EF3DB48.idx  parse.h.19DE69FEDEFA93E6.idx
include/vigil/: arena.h  capture.h  flowkey.h  hashmap.h  parse.h  spscbuff.h
src/core/: arena.c  capture.c  hashmap.c  main.c  parse.c  spscbuf.c
src/engine/: dns.cpp  dns.hpp  http.cpp  http.hpp  protocol.hpp
src/ui/dashboard/: components.hpp  dns_helpers.hpp  flow_types.hpp  main.cpp  theme.hpp
