cmake_minimum_required(VERSION 3.15)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_C_STANDARD 11)
project(vigil C)
find_library(PCAP_LIB pcap)
add_executable(vigil src/core/capture.c src/core/parse.c src/core/arena.c src/core/hashmap.c src/core/main.c)
target_link_libraries(vigil ${PCAP_LIB})
# TODO: add -Wshadow (variable shadowing) and -Wconversion (implicit narrowing)
target_compile_options(vigil PRIVATE -Wall -Wextra -Wpedantic)
target_include_directories(vigil PRIVATE include)
